<resources>
    <string name="sharedUserLabel">RetroArchLite</string>
    <string name="input_method">Input Method</string>
    <string name="file_type_icon">File type icon</string>
    <string name="optimal_settings_device">Optimal device settings</string>
    <string name="extracting_assets_please_wait_">Extracting assets, please wait …</string>
    <string name="select_libretro_core">Select a libretro core</string>
    <string name="loading_data">Loading [%1$s]…</string>
    <string name="installed_cores">Installed Cores</string>
    <string name="uninstall_core_message">Uninstall %1$s?</string>
    <string name="backup_core_message">Copy %1$s to Backup Cores directory?</string>
    <string name="reset_core_options_message">Purge data for %1$s?\nThis includes its core-specific settings, core-provided options, and input remapping files.</string>
    <string name="uninstall_failure">Failed to uninstall core: %1$s</string>
    <string name="uninstall_success">%1$s uninstalled.</string>
    <string name="reset_core_settings_success">Removed all %1$s data.</string>
    <string name="downloadable_cores">Downloadable Cores</string>
    <string name="backup_cores">Backup Cores</string>
    <string name="core_info_displayNameTitle">Display Name</string>
    <string name="core_info_internalNameTitle">Internal Name</string>
    <string name="core_info_systemNameTitle">Description</string>
    <string name="core_info_author">Author(s)</string>
    <string name="core_info_licenseTitle">Core License(s)</string>
    <string name="core_info_manufacturer">Manufacturer</string>
    <string name="core_info_permissions">Permissions</string>
    <string name="core_info_extensions">Supported File Extensions</string>
    <string name="core_info_firmwares">Firmware(s)</string>
    <string name="core_info_notes">Notes</string>
    <string name="download_core_confirm_msg">Download %1$s?</string>
    <string name="downloading_msg">Downloading %1$s…</string>
    <string name="installing_msg">Installing %1$s…</string>
    <string name="download_core_list_error">Error retrieving list of cores.</string>
    <string name="downloadable_cores_ctx_title">Actions</string>
    <string name="downloadable_cores_ctx_goto_libretrodocs">Go to Libretro Docs page</string>
    <string name="downloadable_cores_ctx_sort_by_name">Sort by Name</string>
    <string name="downloadable_cores_ctx_sort_by_system">Sort by Make &#38; System</string>
    <string name="installed_cores_ctx_title">Actions</string>
    <string name="installed_cores_ctx_reset_core_options">Purge Data</string>
    <string name="installed_cores_ctx_remove_core">Uninstall Core</string>
    <string name="installed_cores_ctx_backup_core">Backup Core</string>
    <string name="installed_cores_ctx_update_core">Update Core</string>
    <string name="update_core_confirm_msg">Update %1$s?</string>
    <string name="backing_up_msg">Backing up %1$s…</string>
    <string name="backup_cores_ctx_title">Actions</string>
    <string name="backup_cores_ctx_remove_core">Remove Backup Core</string>
    <string name="backup_cores_confirm_install_msg">Install %1$s?</string>
    <string name="refresh_rate_calibration">Refresh rate calibration</string>
    <string name="touch_screen_with_fingers">Touch the screen with your fingers for more accurate measurements.</string>
    <string name="refresh_rate_measured_to">Refresh rate measured to: %1$s Hz.</string>
    <string name="asset_extraction">Asset Extraction</string>
    <string name="using_os_reported_refresh_rate">Using OS-reported refresh rate of: %1$s Hz.</string>
    <string name="quit">Quit</string>
    <string name="gui_toggle">GUI toggle</string>
    <string name="menu_toggle">Menu toggle</string>
    <string name="audio_video_options">A / V</string>
    <string name="audio_options">Audio</string>
    <string name="audio_latency">Audio latency</string>
    <string name="audio_latency_desc">Set the amount of desired audio latency. Your mileage may vary on the device you are using.</string>
    <string name="auto_audio_latency">Automatically Detect Audio Latency</string>
    <string name="auto_audio_latency_desc">Use automatic audio latency detection.</string>
    <string name="sixty_four_ms">64ms (Low)</string>
    <string name="ninety_six_ms">96ms (Medium)</string>
    <string name="one_twenty_eight_ms">128ms (Medium)</string>
    <string name="one_sixty_ms">160ms (High)</string>
    <string name="input_options">Input</string>
    <string name="back_behavior">Back behavior</string>
    <string name="back_behavior_desc">Select how you want the Back button to behave.</string>
    <string name="overlay_assets">Overlay Management</string>
    <string name="theme_assets">Theme Management</string>
    <string name="enable_overlay_desc">Enable Touchscreen Overlays</string>
    <string name="reextract_overlays">Update/Restore Overlays</string>
    <string name="reextract_overlays_desc">Extracts touchscreen overlays from currently installed APK, and removes all user-installed overlays.</string>
    <string name="reextract_themes">Update/Restore RGUI Themes</string>
    <string name="reextract_themes_desc">Extracts RGUI themes from currently installed APK, and removes all user-installed themes.</string>
    <string name="install_overlays">Install Overlays</string>
    <string name="install_overlays_desc">Add/Update input overlays from a zip file.\nZipfile contents are installed as-is, keeping relative paths.</string>
    <string name="install_themes">Install RGUI Themes</string>
    <string name="install_themes_desc">Add/Update RGUI themes from a zip file.\nZipfile contents are installed as-is, keeping relative paths.</string>
    <string name="config_autodetect">Configuration Autodetection</string>
    <string name="config_autodetect_desc">This will attempt to preconfigure various gamepads and/or IME apps that you connect.</string>
    <string name="list_autodetected">List of autodetected devices</string>
    <string name="autodetected_pads">Configuration Autodetect - Supported Pads</string>
    <string name="icade_profile_pad_one">iCade profile Pad 1</string>
    <string name="icade_profile_pad_one_desc">Select the iCade profile to use for controller 1.</string>
    <string name="icade_profile_pad_two">iCade profile Pad 2</string>
    <string name="icade_profile_pad_two_desc">Select the iCade profile to use for controller 2.</string>
    <string name="icade_profile_pad_three">iCade profile Pad 3</string>
    <string name="icade_profile_pad_three_desc">Select the iCade profile to use for controller 3.</string>
    <string name="icade_profile_pad_four">iCade profile Pad 4</string>
    <string name="icade_profile_pad_four_desc">Select the iCade profile to use for controller 4.</string>
    <string name="debug_input_reporting">Debug input reporting</string>
    <string name="debug_input_reporting_desc">This will report keycodes on-screen generated by your input device(s). Useful for debugging.</string>
    <string name="path_options">Paths</string>
    <string name="rom_paths">Content</string>
    <string name="rom_directory">ROM Directory</string>
    <string name="rom_directory_desc">Sets the default directory for the content browser.\nLast-used ROM directory is saved per core.</string>
    <string name="rom_directory_select">Select a ROM directory</string>
    <string name="backup_cores_paths">Core Backup &amp; Restore</string>
    <string name="backup_cores_directory">Backup Cores Directory</string>
    <string name="backup_cores_directory_desc">Sets the directory where Core Manager finds or creates backup cores (.so or zipped .so with optional .info).\nDefaults to &lt;InternalSD&gt;/RetroArchLite/cores32.</string>
    <string name="backup_cores_directory_select">Select a Backup Cores directory</string>
    <string name="save_files">Save Files</string>
    <string name="enable_custom_dir">Enable Custom Directory</string>
    <string name="savefiles_custom_dir">Enables use of custom savefile directory.\nDefaults to &lt;InternalSD&gt;/RetroArchLite/save.</string>
    <string name="savefile_directory">Savefile directory</string>
    <string name="savefile_directory_desc">Save files (.srm) will be saved in per-core subdirectories of this directory.</string>
    <string name="savefile_directory_select">Select a savefile directory</string>
    <string name="save_states">Save States</string>
    <string name="save_states_custom_dir">Enables use of custom save state directory.\nDefaults to &lt;InternalSD&gt;/RetroArchLite/state.</string>
    <string name="save_state_directory">Save state directory</string>
    <string name="save_state_directory_desc">State files (.state) will be saved in per-core subdirectories of this directory.</string>
    <string name="save_state_directory_select">Select a savestate directory</string>
    <string name="system">System</string>
    <string name="system_custom_dir">Enables use of custom system directory.\nDefaults to &lt;InternalSD&gt;/RetroArchLite/system.</string>
    <string name="system_directory">System directory</string>
    <string name="system_directory_desc">Sets base directory for all system files (BIOS, etc.).\nCores may expect specific subdirectories to exist here.</string>
    <string name="system_directory_select">Select a system directory</string>
    <string name="config">Configs</string>
    <string name="config_custom_dir">Enables use of custom config directory.\nDefaults to &lt;InternalSD&gt;/RetroArchLite/config.</string>
    <string name="config_directory">Config directory</string>
    <string name="config_directory_desc">Sets base directory for configuration and input remap files.\nConfig and remap files will be written to per-core subdirectories of this directory.</string>
    <string name="config_directory_select">Select a config directory</string>
    <string name="general_options">General</string>
    <string name="core_management">Core Management</string>
    <string name="manage_cores">Manage Cores</string>
    <string name="manage_cores_desc">Download, backup, delete, or reinitialize cores.</string>
    <string name="manage_cores32">Manage 32-bit Cores</string>
    <string name="manage_cores32_desc">Download, backup, delete, or reinitialize 32-bit cores.</string>
    <string name="manage_cores64">Manage 64-bit Cores</string>
    <string name="manage_cores64_desc">Download, backup, delete, or reinitialize 64-bit cores.</string>
    <string name="reextract_cores">Restore Cores</string>
    <string name="reextract_cores_desc">Reinstalls cores from the currently installed APK.  New cores are not removed.</string>
    <string name="config_style">Configuration style</string>
    <string name="mame_titles">MAME Titles</string>
    <string name="mame_titles_desc">Translate zip filenames to MAME titles.</string>
    <string name="append_abi_to_corenames">Show 32-bit/64-bit</string>
    <string name="append_abi_to_corenames_desc">Distinguish between 32-bit and 64-bit cores.</string>
    <string name="video_options">Video</string>
    <string name="forced_refresh_rate">Forced Refresh Rate (Hz)</string>
    <string name="forced_refresh_rate_desc">Force a specific refresh rate to be detected. Only set manually if calibration reports wrong refresh rate.</string>
    <string name="calibrate_refresh_rate">Calibrate Refresh Rate</string>
    <string name="calibrate_refresh_rate_desc">Attempts to find the true refresh rate of monitor. Updates value in \'Force refresh rate (Hz)\' option. To help ensure accuracy, make sure no intense background services are running, and avoid triggering screensaver.</string>
    <string name="set_os_reported_refresh_rate">Set OS-reported Refresh Rate</string>
    <string name="set_os_reported_refresh_rate_desc">Sets refresh rate equal to OS-reported value. This might not be accurate for your device.</string>
    <string name="shader_assets">Shader Management</string>
    <string name="enable">Enable</string>
</resources>