<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- ROM Paths -->
    <PreferenceCategory android:title="@string/rom_paths">
        <Preference
            android:key="romDirPref"
            android:title="@string/rom_directory"
            android:summary="@string/rom_directory_desc"/>
    </PreferenceCategory>

    <!-- Save Files -->
    <PreferenceCategory android:title="@string/save_files">
        <CheckBoxPreference android:title="@string/enable_custom_dir"
            android:summary="@string/savefiles_custom_dir"
            android:key="savefile_directory_enable"
            android:defaultValue="false"/>
        <Preference
            android:key="srmDirPref"
            android:title="@string/savefile_directory"
            android:summary="@string/savefile_directory_desc"
            android:dependency="savefile_directory_enable"/>
    </PreferenceCategory>

    <!-- Save States -->
    <PreferenceCategory android:title="@string/save_states">
        <CheckBoxPreference android:title="@string/enable_custom_dir"
            android:summary="@string/save_states_custom_dir"
            android:key="savestate_directory_enable"
            android:defaultValue="false"/>
        <Preference
            android:key="saveStateDirPref"
            android:title="@string/save_state_directory"
            android:summary="@string/save_state_directory_desc"
            android:dependency="savestate_directory_enable"/>
    </PreferenceCategory>

    <!-- System -->
    <PreferenceCategory android:title="@string/system">
        <CheckBoxPreference android:title="@string/enable_custom_dir"
            android:summary="@string/system_custom_dir"
            android:key="system_directory_enable"
            android:defaultValue="false"/>
        <Preference
            android:key="systemDirPref"
            android:title="@string/system_directory"
            android:summary="@string/system_directory_desc"
            android:dependency="system_directory_enable"/>
    </PreferenceCategory>
    
    <!-- Config -->
    <PreferenceCategory android:title="@string/config">
        <CheckBoxPreference android:title="@string/enable_custom_dir"
            android:summary="@string/config_custom_dir"
            android:key="config_directory_enable"
            android:defaultValue="false"/>
        <Preference
            android:key="configDirPref"
            android:title="@string/config_directory"
            android:summary="@string/config_directory_desc"
            android:dependency="config_directory_enable"/>
    </PreferenceCategory>
    
    <!-- Local/Backup Installable Cores -->
    <PreferenceCategory android:title="@string/backup_cores_paths">
        <CheckBoxPreference android:title="@string/enable_custom_dir"
            android:summary="@string/backup_cores32_custom_dir"
            android:key="backup_cores_directory_enable"
            android:defaultValue="false"/>
        <Preference
            android:key="backupCoresDirPref"
            android:title="@string/backup_cores_directory"
            android:summary="@string/backup_cores32_directory_desc"
            android:dependency="backup_cores_directory_enable"/>
    </PreferenceCategory>
</PreferenceScreen>
