<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
   <PreferenceCategory android:title="@string/audio_options">
      <CheckBoxPreference
          android:defaultValue="true"
          android:key="audio_latency_auto"
          android:summary="@string/auto_audio_latency_desc"
          android:title="@string/auto_audio_latency"
          android:disableDependentsState="true" />
      <ListPreference
          android:entries="@array/audio_latency_options"
          android:entryValues="@array/audio_latency_options_values"
          android:defaultValue="64"
          android:key="audio_latency"
          android:summary="@string/audio_latency_desc"
          android:title="@string/audio_latency"
          android:dependency="audio_latency_auto" />
   </PreferenceCategory>
    
   <PreferenceCategory android:title="@string/video_options">
      <Preference
         android:summary="@string/calibrate_refresh_rate_desc"
         android:title="@string/calibrate_refresh_rate" >
         <intent
            android:targetClass="com.retroarch.browser.DisplayRefreshRateTest"
            android:targetPackage="@string/app_id" />
      </Preference>
      <Preference
         android:key="set_os_reported_ref_rate_pref"
         android:summary="@string/set_os_reported_refresh_rate_desc"
         android:title="@string/set_os_reported_refresh_rate" />
      <EditTextPreference
         android:key="video_refresh_rate"
         android:numeric="decimal"
         android:summary="@string/forced_refresh_rate_desc"
         android:title="@string/forced_refresh_rate" />
   </PreferenceCategory>
    
</PreferenceScreen>
