<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Core Management -->
    <PreferenceCategory android:title="@string/core_management">
        <Preference 
            android:title="@string/manage_cores32"
            android:summary="@string/manage_cores32_desc">
            <intent
                android:targetClass="com.retroarch.browser.coremanager.CoreManagerActivity"
                android:targetPackage="com.retroarchlite"/>
        </Preference>
        <Preference 
            android:title="@string/manage_cores64"
            android:summary="@string/manage_cores64_desc">
            <intent
                android:targetClass="com.retroarch.browser.coremanager.CoreManagerActivity"
                android:targetPackage="com.retroarchlite64"/>
        </Preference>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="append_abi_to_corenames"
            android:summary="@string/append_abi_to_corenames_desc"
            android:title="@string/append_abi_to_corenames" />
    </PreferenceCategory>
    
    <!-- Titles -->
    <PreferenceCategory android:title="@string/mame_titles" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="mame_titles"
            android:summary="@string/mame_titles_desc"
            android:title="@string/enable" />
    </PreferenceCategory>
    
    <!-- Theme Assets -->
    <PreferenceCategory android:title="@string/theme_assets" >
        <Preference
           android:key="install_themes_pref"
           android:title="@string/install_themes"
           android:summary="@string/install_themes_desc"/>
    </PreferenceCategory>

    <!-- All Assets -->
    <PreferenceCategory android:title="@string/asset_management" >
        <Preference
            android:key="update_assets_pref"
            android:summary="@string/update_assets_desc"
            android:title="@string/update_assets" />
        <Preference
            android:key="restore_assets_pref"
            android:summary="@string/restore_assets_desc"
            android:title="@string/restore_assets" />
    </PreferenceCategory>
</PreferenceScreen>