<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Overlay Assets -->
    <PreferenceCategory android:title="@string/overlay_assets" >
         <CheckBoxPreference
            android:defaultValue="true"
            android:key="input_overlay_enable"
            android:title="@string/enable_overlay"
            android:summary="@string/enable_overlay_desc"/>
    </PreferenceCategory>
    
    <!-- Configuration Autodetection -->
    <PreferenceCategory android:title="@string/config_autodetect" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="input_autodetect_enable"
            android:summary="@string/config_autodetect_desc"
            android:title="@string/enable"
            android:disableDependentsState="true" />
    </PreferenceCategory>


</PreferenceScreen>
